examples/test/testpolicy6915.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6915
  namespace: namespace263
spec:
  podSelector:
    matchLabels:
      key37: value38
      key16: value31
      key22: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value29
          key2: value40
          key40: value24
      podSelector:
        matchLabels:
          key37: value21
